--- a/cmake/modules/CMakeLists.txt
+++ b/cmake/modules/CMakeLists.txt
@@ -9,7 +9,5 @@
 #   Felix Schindler (2014, 2016 - 2017)
 # ~~~
 
-set(modules 
-  DuneGdtMacros.cmake
-)
+set(modules DuneGdtMacros.cmake)
 install(FILES "${modules}" DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/cmake/modules)
