--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -32,7 +32,7 @@ class InstallPlatlib(install):
 
 
 setup(name='dune-gdt',
-      version='2021.1.1-dev',
+      version='2021.1.1.dev',
       namespace_packages=['dune'],
       description='Python for Dune-Gdt',
       author='The dune-gdt devs',
@@ -45,6 +45,6 @@ setup(name='dune-gdt',
           'install': InstallPlatlib,
       },
       distclass=BinaryDistribution,
-      install_requires=['jinja2', 'where', 'codecov', 'dune-xt~=2021.1'],
+      install_requires=['jinja2', 'where', 'codecov', 'dune-xt>=2021.1.0,==2021.1.*'],
       extras_requires={'parallel': ['bokeh', 'pymumps', 'metis']},
       )
