--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -45,6 +45,6 @@ setup(name='dune-gdt',
           'install': InstallPlatlib,
       },
       distclass=BinaryDistribution,
-      install_requires=['jinja2', 'where', 'codecov', 'dune-xt>=2021.1.0,==2021.1.*'],
+      install_requires=['jinja2', 'where', 'codecov', 'dune-xt>dev,==2021.1.*'],
       extras_requires={'parallel': ['bokeh', 'pymumps', 'metis']},
       )
