--- a/examples/activepolargels.ini
+++ b/examples/activepolargels.ini
@@ -1,16 +1,16 @@
 [grid]
-NX=30
-NY=30
+NX=120
+NY=120
 
 [fem]
-degree=2
+degree=1
 torder=1
 t_end=1e-2
 dt=1e-3
 superintegration_order=2
 
 [problem]
-testcase=single_cell
+testcase=cell_isolation_experiment
 epsilon=0.21
 gamma=0.025
 kappa=1
@@ -24,5 +24,5 @@ Fa=-1
 
 [output]
 prefix=cpp
-write_step=0.01
+write_step=1e-2
 subsampling=false
