--- a/.ci/gitlab/config.yml
+++ b/.ci/gitlab/config.yml
@@ -94,6 +94,12 @@ variables:
 
 .pre-commit:
     stage: sanity
+    retry:
+        max: 2
+        when:
+            - runner_system_failure
+            - stuck_or_timeout_failure
+            - api_failure
     image: "python:3.9"
     cache:
       paths:
