--- a/python/dune/gdt/CMakeLists.txt
+++ b/python/dune/gdt/CMakeLists.txt
@@ -13,13 +13,8 @@
 
 file(GLOB_RECURSE header "*.hh")
 
-dune_pybindxi_add_module(_discretefunction_bochner
-                         EXCLUDE_FROM_ALL
-                         ${header}
-                         discretefunction/bochner.cc)
-dune_pybindxi_add_module(_discretefunction_discretefunction
-                         EXCLUDE_FROM_ALL
-                         ${header}
+dune_pybindxi_add_module(_discretefunction_bochner EXCLUDE_FROM_ALL ${header} discretefunction/bochner.cc)
+dune_pybindxi_add_module(_discretefunction_discretefunction EXCLUDE_FROM_ALL ${header}
                          discretefunction/discretefunction.cc)
 dune_pybindxi_add_module(_discretefunction_dof_vector EXCLUDE_FROM_ALL ${header} discretefunction/dof-vector.cc)
 dune_pybindxi_add_module(_functionals_interfaces_common EXCLUDE_FROM_ALL ${header} functionals/interfaces_common.cc)
@@ -45,13 +40,9 @@ dune_pybindxi_add_module(_local_bilinear_forms_restricted_coupling_intersection_
                          local/bilinear-forms/restricted_coupling_intersection_integrals.cc)
 dune_pybindxi_add_module(_local_bilinear_forms_restricted_intersection_integrals EXCLUDE_FROM_ALL ${header}
                          local/bilinear-forms/restricted_intersection_integrals.cc)
-dune_pybindxi_add_module(_local_bilinear_forms_vectorized_element_integrals
-                         EXCLUDE_FROM_ALL
-                         ${header}
+dune_pybindxi_add_module(_local_bilinear_forms_vectorized_element_integrals EXCLUDE_FROM_ALL ${header}
                          local/bilinear-forms/vectorized_element_integrals.cc)
-dune_pybindxi_add_module(_local_functionals_element_integrals
-                         EXCLUDE_FROM_ALL
-                         ${header}
+dune_pybindxi_add_module(_local_functionals_element_integrals EXCLUDE_FROM_ALL ${header}
                          local/functionals/element_integrals.cc)
 dune_pybindxi_add_module(_local_functionals_element_interface EXCLUDE_FROM_ALL ${header}
                          local/functionals/element_interface.cc)
@@ -61,13 +52,9 @@ dune_pybindxi_add_module(_local_functionals_intersection_interface EXCLUDE_FROM_
                          local/functionals/intersection_interface.cc)
 dune_pybindxi_add_module(_local_functionals_restricted_intersection_integrals EXCLUDE_FROM_ALL ${header}
                          local/functionals/restricted_intersection_integrals.cc)
-dune_pybindxi_add_module(_local_functionals_vectorized_element_integrals
-                         EXCLUDE_FROM_ALL
-                         ${header}
+dune_pybindxi_add_module(_local_functionals_vectorized_element_integrals EXCLUDE_FROM_ALL ${header}
                          local/functionals/vectorized_element_integrals.cc)
-dune_pybindxi_add_module(_local_integrands_binary_element_interface
-                         EXCLUDE_FROM_ALL
-                         ${header}
+dune_pybindxi_add_module(_local_integrands_binary_element_interface EXCLUDE_FROM_ALL ${header}
                          local/integrands/binary_element_interface.cc)
 dune_pybindxi_add_module(_local_integrands_binary_intersection_interface EXCLUDE_FROM_ALL ${header}
                          local/integrands/binary_intersection_interface.cc)
