--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule ".vcsetup"]
 	path = .vcsetup
-	url = https://github.com/dune-community/vcsetup.git
+	url = https://zivgitlab.uni-muenster.de/ag-ohlberger/dune-community/vcsetup.git
 [submodule ".ci/shared"]
 	path = .ci/shared
-	url = https://github.com/dune-community/dune-xt-ci
+	url = https://zivgitlab.uni-muenster.de/ag-ohlberger/dune-community/dune-xt-ci.git
