--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -22,13 +22,15 @@ ignore = E221,E226,E241,E242, W0105, N803, N806
 # W0105 String statement has no effect (we use triple qoted strings as documentation in some files)
 # N803 argument name should be lowercase (we use single capital letters everywhere for vectorarrays)
 # N806 same for variables in function
+# F401 imported but not used, we have a ton of those which we don't want to ignore individually
 
 
 [flake8]
 max-line-length = 120
 ignore = E221,E226,E241,E242, W0105, N803, N806
-# The following exclude avoids wrong warnings for unused imports
-exclude = __init__.py
+per-file-ignores =
+  python/dune/gdt/basic.py:F401
+  examples/gamm_2019*.py:F405,F401,F403,E402
 
 [tool:pytest]
 testpaths = test/
