--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -19,7 +19,7 @@ from setuptools.command.install import install
 
 extras_require = {
   'parallel': ('bokeh', 'pymumps', 'metis'),
-  'visualisation': ('dune-xt[visualisation]>=${dune-xt_VERSION}',)
+  'visualisation': ('dune-xt[visualisation]~=${dune-xt_VERSION_MAJOR}.${dune-xt_VERSION_MINOR}',)
 }
 
 extras_require['all'] = [p for plist in extras_require.values() for p in plist]
